do not join when black list and full