@@ -3,6 +3,8 @@ package com.pdemuinck;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -17,10 +19,15 @@ public class ActivityMockService implements ActivityService {
 
   @Override
   public void joinActivity(String activityName, String userName) {
-    activities = fetchActivities();
-    activities.stream().filter(a -> a.getName().equals(activityName) && a.getAvailableSpots() > 0)
-        .findFirst().ifPresent(a -> a.join(
-            LocalDateTime.now(), userName));
+    List<String>
+        blackLists = dataStore.fetchBlackLists().stream().filter(s -> s.startsWith(activityName))
+        .map(s -> Arrays.asList(s.split(","))).flatMap(Collection::stream).toList();
+    activities.forEach(a -> {
+      if(a.getName().equals(activityName)){
+        a.setBlackList(blackLists);
+      }
+      a.join(LocalDateTime.now(), userName);
+    });
   }
 
   @Override
@@ -39,8 +46,13 @@ public class ActivityMockService implements ActivityService {
   public void pauseAllActivities() {
     activities.forEach(activity -> activity.pause(LocalDateTime.now()));
     String data =
-        activities.stream().map(a -> a.getDurationByKid()).collect(Collectors.joining("\r\n"));
-    dataStore.saveActivityTime(data);
+        activities.stream().map(Activity::getDurationByKid).collect(Collectors.joining("\r\n"));
+    dataStore.saveActivityTime(data + "\r\n");
+  }
+
+  @Override
+  public List<Activity> getActivities(){
+    return this.activities;
   }
 
 
@@ -48,17 +60,28 @@ public class ActivityMockService implements ActivityService {
   public List<Activity> fetchActivities() {
     try {
       this.activities = dataStore.fetchActivities().stream().map(s -> {
-        String name = s.split(",", -1)[0];
-        String imageUrl = s.split(",", -1)[1];
+        String[] split = s.split(",", -1);
+        String name = split[0];
+        String imageUrl = split[1];
         try {
-          int spots = Integer.valueOf(s.split(",", -1)[2]);
-          boolean show = Boolean.valueOf(s.split(",", -1)[3]);
-          return new Activity(name, imageUrl, spots, show);
-        } catch (Exception e) {
+          int spots = 0;
+          if (split.length == 3) {
+            spots = Integer.valueOf(split[2]);
+          }
+          if (split.length == 4) {
+            spots = Integer.valueOf(split[2]);
+            boolean show = Boolean.valueOf(split[3]);
+            return new Activity(name, imageUrl, spots, show);
+          } else {
+            return new Activity(name, imageUrl, spots);
+          }
+        } catch (NumberFormatException e) {
           return new Activity(name, imageUrl, 0);
+        } catch (ArrayIndexOutOfBoundsException e) {
+          throw new RuntimeException(e);
         }
       }).collect(Collectors.toList());
-      activities = activities.stream().filter(a -> !a.getName().isBlank()).toList();
+      activities = activities.stream().filter(a -> !a.getName().isBlank()).collect(Collectors.toList());
       return activities;
     } catch (ArrayIndexOutOfBoundsException e) {
       return new ArrayList<>();
@@ -73,8 +96,8 @@ public class ActivityMockService implements ActivityService {
   }
 
   private void addActivity(Activity activity) {
-    if (!activities.contains(activity)) {
-      activities.add(activity);
+    if (this.activities.stream().noneMatch(a -> a.getName().equals(activity.getName()))) {
+      this.activities.add(activity);
       dataStore.writeActivity(
           String.join(",", activity.getName(), activity.getImageUrl(), "4", "true") + "\r\n");
     } else {
@@ -102,16 +125,17 @@ public class ActivityMockService implements ActivityService {
 
   @Override
   public void updateActivity(String name, String icon, int spots) {
-    this.activities = fetchActivities();
-    String data = this.activities.stream().distinct().map(a -> {
-      if (name.equals(a.getName())) {
-        a.setImageUrl(icon);
-        a.setMaxSpots(spots);
+    List<String> data = new ArrayList<>();
+    for(Activity activity : activities){
+      if (name.equals(activity.getName())) {
+        activity.setImageUrl(icon);
+        activity.setMaxSpots(spots);
       }
-      return String.join(",", a.getName(), a.getImageUrl(), String.valueOf(a.getMaxSpots()),
-          String.valueOf(a.isShow()));
-    }).collect(Collectors.joining("\r\n"));
-    dataStore.overWriteActivities(data + "\r\n");
+      data.add(String.join(",", activity.getName(), activity.getImageUrl(),
+          String.valueOf(activity.getMaxSpots()),
+          String.valueOf(activity.isShow())));
+    }
+    dataStore.overWriteActivities(String.join("\r\n", data) + "\r\n");
   }
 
   @Override
@@ -130,10 +154,16 @@ public class ActivityMockService implements ActivityService {
   @Override
   public List<TimeReportRow> fetchTimeReport(String name) {
     List<String> timings = dataStore.fetchActivityTime();
-    return timings.stream().map(this::parse).collect(Collectors.toList());
+    List<TimeReportRow> rows = timings.stream().map(this::parse).collect(Collectors.toList());
+    return rows.stream().filter(r -> r.getUserName().equals(name)).collect(Collectors.toList());
   }
 
-  private TimeReportRow parse(String data){
+  @Override
+  public void addToBlackList(String activity, String user) {
+    dataStore.saveBlacklist(String.join(",", activity, user) + "\r\n");
+  }
+
+  private TimeReportRow parse(String data) {
     String[] split = data.split(",", -1);
     return new TimeReportRow(split[0], split[1], LocalDate.parse(split[2]), Long.valueOf(split[3]));
   }
